--- a/src/App/scss/mixins.scss
+++ b/src/App/scss/mixins.scss
@@ -1,5 +1,5 @@
 body {
-    // background-color: #fff;
+    background: linear-gradient( rgba(0,0,0,1) 0%, rgba(0,0,40,1) 46%, rgba(0,0,54,1) 76%, rgba(0,0,107,1) 91%);
     margin: 0;
 }
 .container{
