--- a/src/App/scss/tab.scss
+++ b/src/App/scss/tab.scss
@@ -2,7 +2,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    color: white;
 }
 .tab{
     padding: 15px;
+    outline: none;
+    :active{
+        outline: none;
+    }
+    cursor: pointer;
+}
+.active {
+    color: #FFC926;
 }
