--- a/src/App/scss/home.scss
+++ b/src/App/scss/home.scss
@@ -3,4 +3,44 @@
     justify-content: center;
     align-items: center;
     height: calc(100vh - 48px);
+    color: white;
+    h3{
+        font-size: 50px;
+        font-family: sans-serif;
+        overflow: hidden; 
+        border-right: .15em solid orange;
+        white-space: nowrap;
+        margin: 0 auto;
+        display: block;
+        letter-spacing: .15em;
+        animation: 
+            typing 2.5s steps(25, end),
+            blink-caret .75s step-end infinite;
+            @keyframes typing {
+                from { width: 0 }
+                to {width: 50%}
+              }
+              @keyframes blink-caret {
+                from, to { border-color: transparent }
+                50% { border-color: orange; }
+              }
+    }
+}
+
+.websites{
+    display: flex;
+    iframe{
+        transform: scale(0.5);
+    }
+}
+.hidden{
+    display: none;
+}
+.canvas-container {
+    position: relative;
+    height: 100vh;
+    canvas{
+        position: absolute;
+        z-index: -1;
+    }
 }
