--- a/src/App/scss/mixins.scss
+++ b/src/App/scss/mixins.scss
@@ -4,4 +4,21 @@ body {
 }
 .container{
     // color: #fff;
+    .tab-main-box{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+    }
+    .tab{
+        padding: 15px;
+        outline: none;
+        :active{
+            outline: none;
+        }
+        cursor: pointer;
+    }
+    .active {
+        color: #FFC926;
+    }
 }
